--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.23.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.22.1",
     "next": "^9.4.4",
